课程设计第三次提交，后台管理页面

--- a/osService/pom.xml
+++ b/osService/pom.xml
@@ -107,6 +107,12 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
+
+        <!-- mybaits提供的生成器 -->
+        <dependency>
+            <groupId>org.mybatis.generator</groupId>
+            <artifactId>mybatis-generator-core</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
