--- a/osUser/src/main/webapp/WEB-INF/web.xml
+++ b/osUser/src/main/webapp/WEB-INF/web.xml
@@ -25,6 +25,18 @@
 		<servlet-name>default</servlet-name>
 		<url-pattern>*.js</url-pattern>
 	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>default</servlet-name>
+		<url-pattern>*.jpg</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>default</servlet-name>
+		<url-pattern>*.png</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>default</servlet-name>
+		<url-pattern>*.mp4</url-pattern>
+	</servlet-mapping>
 
 	<!-- springmvc核心前端控制器 -->
 	<servlet>
@@ -52,16 +64,16 @@
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 
-	<!-- 404错误拦截 -->
-	<error-page>
-		<error-code>404</error-code>
-		<location>/WEB-INF/error/404.html</location>
-	</error-page>
-	<!-- 500错误拦截 -->
-	<error-page>
-		<error-code>500</error-code>
-		<location>/WEB-INF/error/500.html</location>
-	</error-page>
+	 <!--404错误拦截-->
+	<!--<error-page>-->
+		<!--<error-code>404</error-code>-->
+		<!--<location>/error/404.jsp</location>-->
+	<!--</error-page>-->
+	 <!--500错误拦截-->
+	<!--<error-page>-->
+		<!--<error-code>500</error-code>-->
+		<!--<location>/error/500.jsp</location>-->
+	<!--</error-page>-->
 
 	<!--&lt;!&ndash; 加载log4j &ndash;&gt;-->
 	<!--<context-param>-->
