--- a/pom.xml
+++ b/pom.xml
@@ -131,13 +131,6 @@
                 <scope>test</scope>
             </dependency>
 
-            <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
-            <dependency>
-                <groupId>org.slf4j</groupId>
-                <artifactId>slf4j-api</artifactId>
-                <version>1.7.25</version>
-            </dependency>
-
             <!-- https://mvnrepository.com/artifact/jstl/jstl -->
             <dependency>
                 <groupId>jstl</groupId>
@@ -195,6 +188,20 @@
                 <groupId>org.webjars</groupId>
                 <artifactId>jquery</artifactId>
                 <version>3.4.0</version>
+            </dependency>
+
+            <!-- https://mvnrepository.com/artifact/org.webjars/jquery-cookie -->
+            <dependency>
+                <groupId>org.webjars</groupId>
+                <artifactId>jquery-cookie</artifactId>
+                <version>1.4.1</version>
+                <scope>runtime</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>joda-time</groupId>
+                <artifactId>joda-time</artifactId>
+                <version>2.3</version>
             </dependency>
 
         </dependencies>
