课程设计第四次提交，增添一些功能(修改上次)

--- a/osUser/src/main/webapp/WEB-INF/web.xml
+++ b/osUser/src/main/webapp/WEB-INF/web.xml
@@ -65,15 +65,15 @@
 	</listener>
 
 	 <!--404错误拦截-->
-	<!--<error-page>-->
-		<!--<error-code>404</error-code>-->
-		<!--<location>/error/404.jsp</location>-->
-	<!--</error-page>-->
+	<error-page>
+		<error-code>404</error-code>
+		<location>/error/404.jsp</location>
+	</error-page>
 	 <!--500错误拦截-->
-	<!--<error-page>-->
-		<!--<error-code>500</error-code>-->
-		<!--<location>/error/500.jsp</location>-->
-	<!--</error-page>-->
+	<error-page>
+		<error-code>500</error-code>
+		<location>/error/500.jsp</location>
+	</error-page>
 
 	<!--&lt;!&ndash; 加载log4j &ndash;&gt;-->
 	<!--<context-param>-->
